# org

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  build.rs  tauri.conf.json
app/icons/: icon.icns
app/src/: commands.rs  main.rs
app/ui/: index.html  main.js  style.css
cli/: Cargo.toml  build.rs
cli/src/: main.rs  render.rs  update.rs
core/: Cargo.toml
core/src/: db.rs  edges.rs  infer.rs  io.rs  lib.rs  model.rs  people.rs  search.rs  seniority.rs  tree.rs
