# Virtual workspace root: no [package] here, just the member list.
# Keeping the root manifest package-free is what lets `core` stay UI-agnostic
# and lets `app/` (Tauri) join as a peer depending on the same `core`.
[workspace]
members = ["core", "cli", "app"]
resolver = "3" # edition-2024 default resolver; required for a 2024 workspace

# Shared dependency versions live here so every member pins identical versions.
# Members refer to these with `dep = { workspace = true }`.
[workspace.dependencies]
libsql = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
clap = { version = "4", features = ["derive"] }
